examples/test/testpolicy6827.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6827
  namespace: namespace175
spec:
  podSelector:
    matchLabels:
      key6: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value42
          key46: value40
          key41: value29
      podSelector:
        matchLabels:
          key18: value14
          key20: value1
          key29: value0
